# proyecto-ml

./: .gitignore  README.md  pyproject.toml
ML/data/processed/: ML_future.csv  Merch_ML.csv  Resultados.csv  Resultados_1.csv  Resultados_final.csv  Resultados_modelos.csv  predicciones.csv  predicciones1.csv  predicciones_final.csv  predicciones_final_sinT.csv
ML/data/raw/: Merch_RAW.csv
ML/models/trained/: DesicionTreeClassifier.ipynb  DesicionTreeClassifier_clust.ipynb  KNN.ipynb  Linear_Regression.ipynb  RandomForest.ipynb  RandomForestClassifier.ipynb  Regresion_Logistica.ipynb  Regresion_Serie_tiempo.ipynb  SGDClassifier.ipynb  SVM.ipynb  Time_series.ipynb  Time_series_arima.ipynb  Time_series_prophet.ipynb  Xgboost.ipynb  pred_future.ipynb
ML/notebooks/: EDA.ipynb  cleaning_ML.ipynb
ML/src/utils/: ClaseAbdon.py
ML/src/visualization/: Data_visualitation.ipynb
