[tool.poetry]
name = "proyecto ml"
version = "0.1.0"
description = ""
authors = ["abdonrb <abdondjesusramirez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
prophet = "^1.1.6"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
xgboost = "^2.1.4"
statsmodels = "^0.14.4"
skforecast = "^0.14.0"
numpy = "^2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
